<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="action_setting">1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="textview_fir">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="title_hint">title_hint</string>
    <string name="todo_solved_label" />
    <string name="hello" />
</resources>